docs: add build-flag to fix `wait_ms` deprecation

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,5 @@ lib_deps =
 	mbed-st/TS_DISCO_F429ZI@0.0.0+sha.4f8b6df8e235
 	mbed-st/GYRO_DISCO_F429ZI@0.0.0+sha.dfe10fcd7524
 	mbed-st/EEPROM_DISCO_F429ZI@0.0.0+sha.0980ff473345
+build_flags =
+	-Dwait_ms=thread_sleep_for  ; fix wait_ms deprecation
